Add docker builder and deployer img's
